c5m4 reverted tank ban range to 82% c2m1 blocked nav on fence by pool to stop survivors from getting extra distance and spawning tanks early c2m1 added props to visualize ladders between motel balconies added template for func_nav_blocker and trigger brushes

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -197,6 +197,24 @@ add:
 	"angles" "[p y r]"
 	"model" "*[brush number]"
 }
+; --- Trigger brushes
+; --- NOTE: Not all brushes require the boxmins/boxmaxs to be specified, but some brush types such as teleport triggers will not work without them
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "[trigger name],AddOutput,mins [-x -y -z],0,-1"
+	"OnMapSpawn" "[trigger name],AddOutput,maxs [x y z],0,-1"
+	"OnMapSpawn" "[trigger name],AddOutput,boxmins [-x -y -z],0,-1"
+	"OnMapSpawn" "[trigger name],AddOutput,boxmaxs [x y z],0,-1"
+	"OnMapSpawn" "[trigger name],AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "[trigger type]"
+	"origin" "[x y z]"
+	"targetname" "[trigger name]"
+	"filtername" "[filter entity name]"
+	"spawnflags" "1"
+	; --- Trigger event output here
+}
 
 ; ####################  I/O LOGIC  ####################
 ; --- Template for modifying entity input/output logic
@@ -220,6 +238,7 @@ add:
 ; --- point_nav_attribute_region can be used to assign attributes to nav mesh regions defined by the spawnflags used
 ; --- Once placed these entities must be activated by a logic_auto
 ; --- 4096: Obscured - allows SI and mobs to spawn without LOS being blocked, 2048: Checkpoint - saferoom nav area
+add:
 {
 	"classname" "point_nav_attribute_region"
 	"origin" "[x y z]"
@@ -231,4 +250,23 @@ add:
 {
 	"classname" "logic_auto"
 	"OnMapSpawn" "[nav name],ApplyNavAttributes,,10,-1"
+}
+; --- func_nav_blocker can be used to block or unblock nav mesh regions to improve pathing around obstacles or prevent issues with nav connections
+; --- Once placed these entities must be activated by firing either BlockNav or UnblockNav after a small delay
+; --- teamToBlock defines which team's navs are affected, -1 = everyone, 2 = survivors, 3 = infected
+; --- affectsFlow can be used when flow gets recalculated when the nav blocker is enabled or disabled, but it should only be used where the blocker will ALWAYS be the same for both teams
+; --- As it potentially causes issues with uneven tank spawns when one team may not activate the blocker but the other team does
+add:
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],AddOutput,mins [-x -y -z],0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],AddOutput,maxs [x y z],0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_[brush name],[BlockNav/UnblockNav],,1,-1"
+}
+{
+	"classname" "func_nav_blocker"
+	"origin" "[x y z]"
+	"targetname" "anv_mapfixes_losfix_[brush name]"
+	"teamToBlock" "[n]"
 }
