--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -620,6 +620,71 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
+; --- Props to visualize ladders between motel balconies
+{
+	"classname" "prop_dynamic"
+	"origin" "1376 5428 -809"
+	"angles" "0 0 0"
+	"model" "models/props_downtown/gutter_downspout_straight02.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1376 4328 -809"
+	"angles" "0 0 0"
+	"model" "models/props_downtown/gutter_downspout_straight02.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1794 3712 -809"
+	"angles" "0 90 0"
+	"model" "models/props_downtown/gutter_downspout_straight02.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2410 3712 -809"
+	"angles" "0 90 0"
+	"model" "models/props_downtown/gutter_downspout_straight02.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+; --- Block nav mesh on fence by pool to stop survivors from getting extra distance and spawning tanks early
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "pool_fence_navblock,AddOutput,mins -8 -22 -6,0,-1"
+	"OnMapSpawn" "pool_fence_navblock,AddOutput,maxs 8 22 6,0,-1"
+	"OnMapSpawn" "pool_fence_navblock,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "pool_fence_navblock,BlockNav,,1,-1"
+	"OnMapSpawn" "pool_fence_navtrigger,AddOutput,mins -90 -4 -56,0,-1"
+	"OnMapSpawn" "pool_fence_navtrigger,AddOutput,maxs 90 4 56,0,-1"
+	"OnMapSpawn" "pool_fence_navtrigger,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_nav_blocker"
+	"origin" "2094 3696 -830"
+	"targetname" "pool_fence_navblock"
+	"teamToBlock" "2"
+}
+{
+	"classname" "func_nav_blocker"
+	"origin" "2117 3618 -830"
+	"targetname" "pool_fence_navblock"
+	"teamToBlock" "2"
+}
+; --- Trigger to unblock the nav once survivors exit the motel room on the other side of the fence since it's no longer relevant
+{
+	"classname" "trigger_once"
+	"origin" "2222 3580 -752"
+	"targetname" "pool_fence_navtrigger"
+	"filtername" "filter_survivor"
+	"spawnflags" "1"
+	"OnTrigger" "pool_fence_navblock,UnblockNav,,0,-1"
+}
 ; --- Clipping on police car lights
 {
 	"classname" "env_physics_blocker"
