c2m1 Added ammo pile in lower motel room before the one way drop

--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -72,6 +72,17 @@ add:
 	"spawnflags" "2"
 	"count" "5"
 }
+; --- Ammo pile in motel room before the drop
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "2703 3360 -938"
+	"angles" "0 0 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
 ; --- Ammo pile immediately after the drop
 {
 	"classname" "weapon_ammo_spawn"
