c2m1 Improved clipping on added bushes before one way drop c2m2 Added an infected ladder to climb on the tents above the button to start the event c2m3 Reverted tank ban range to 56% - 100%, from 58% - 100%, as late tanks were not spawning due to a bug, and not the ban range c2m3 Blocked climbing on an outside section of the coaster before the tunnel c2m4 Blocked survivors from standing on the shrub walls next to the barn

--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -927,7 +927,16 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Grassy area
+; --- Ambulance on the highway
+{
+	"classname" "prop_dynamic"
+	"origin" "3410 4204 -1008"
+	"angles" "0 173 0"
+	"model" "models/props_vehicles/ambulance.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Tree in grassy area on street before one way drop
 {
 	"classname" "prop_dynamic"
 	"origin" "3910 5154 -1013"
@@ -936,6 +945,16 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Clipping on tree
+{
+	"classname" "env_physics_blocker"
+	"origin" "4063 4570 -512"
+	"mins" "-37 -78 -256"
+	"maxs" "37 78 256"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Shrubs in grassy area on street before one way drop
 {
 	"classname" "prop_dynamic"
 	"origin" "3822 5408 -1014"
@@ -952,15 +971,6 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Ambulance on the highway
-{
-	"classname" "prop_dynamic"
-	"origin" "3410 4204 -1008"
-	"angles" "0 173 0"
-	"model" "models/props_vehicles/ambulance.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
 ; --- Clipping above shrubs
 {
 	"classname" "env_physics_blocker"
@@ -972,17 +982,41 @@ add:
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "4233 4704 -531"
-	"mins" "-73 -204 -275"
-	"maxs" "73 204 275"
+	"origin" "4233 4715 -617"
+	"mins" "-73 -193 -361"
+	"maxs" "73 193 361"
 	"initialstate" "1"
 	"BlockType" "1"
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "4063 4570 -512"
-	"mins" "-37 -78 -256"
-	"maxs" "37 78 256"
+	"origin" "4143 4718 -617"
+	"mins" "-17 -150 -361"
+	"maxs" "17 150 361"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "4316 4714 -617"
+	"mins" "-10 -116 -361"
+	"maxs" "10 116 361"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "4232 4501 -617"
+	"mins" "-46 -21 -361"
+	"maxs" "46 21 361"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "4219 4935 -617"
+	"mins" "-45 -27 -361"
+	"maxs" "45 27 361"
 	"initialstate" "1"
 	"BlockType" "1"
 }
@@ -998,25 +1032,28 @@ add:
 ; --- Clipping above shrubs
 {
 	"classname" "env_physics_blocker"
-	"origin" "2812 2767 -586"
-	"mins" "-63.5 -78 -330"
-	"maxs" "63.5 78 330"
+	"origin" "2811 2767 -656"
+	"mins" "-64 -78 -400"
+	"maxs" "64 78 400"
 	"initialstate" "1"
 	"BlockType" "1"
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "2840 2873 -586"
-	"mins" "-23 -28 -330"
-	"maxs" "23 28 330"
+	"origin" "2840 2873 -656"
+	"mins" "-23 -28 -400"
+	"maxs" "23 28 400"
 	"initialstate" "1"
 	"BlockType" "1"
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "2791 2871 -586"
-	"mins" "-26.5 -26 -330"
-	"maxs" "26.5 26 330"
+	"origin" "2790 2860 -656"
+	"angles" "0 44 0"
+	"mins" "-50 -8 -400"
+	"maxs" "50 8 400"
+	"boxmins" "-50 -8 -400"
+	"boxmaxs" "50 8 400"
 	"initialstate" "1"
 	"BlockType" "1"
 }
