--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -1742,6 +1742,17 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
+; --- Infected ladder to climb on tent above the button to start the event
+{
+	"classname" "func_simpleladder"
+	"origin" "-978 -3659 57"
+	"angles" "0 0 0"
+	"model" "*46"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
 
 
 ; #######  MISCELLANEOUS / MAP SPECIFIC CHANGES  ######
