--- a/cfg/stripper/maps/c2m3_coaster.cfg
+++ b/cfg/stripper/maps/c2m3_coaster.cfg
@@ -484,6 +484,15 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Block climbing on an outside section of the coaster before the tunnel
+{
+	"classname" "env_physics_blocker"
+	"origin" "-3510 2673 636"
+	"mins" "-8 -223 -324"
+	"maxs" "8 223 324"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Block jumping on the hedge corner at the tunnel exit
 {
 	"classname" "env_physics_blocker"
