--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -362,6 +362,15 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Block standing on shrub walls next to the barn
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1032 -669 532"
+	"mins" "-1216 -4 -492"
+	"maxs" "1216 4 492"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Block standing on the porta potties by the event button
 {
 	"classname" "env_physics_blocker"
