c5m1 Infected ladder to get from the lower section of roof to the upper section on the left of the saferoom c5m2 Added additional infected ladder to hedge by blocked off route on the left side of the park entrance

--- a/cfg/stripper/maps/c5m1_waterfront.cfg
+++ b/cfg/stripper/maps/c5m1_waterfront.cfg
@@ -616,6 +616,17 @@ modify:
 	}
 }
 add:
+; --- Infected ladder to get from the lower section of roof to the upper section on the left of the saferoom
+{
+	"classname" "func_simpleladder"
+	"origin" "344 3 120"
+	"angles" "0 0 0"
+	"model" "*13"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
 ; --- Infected ladder to get on roof to the right of the waterfront sign near the start
 {
 	"classname" "func_simpleladder"
