--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -1942,6 +1942,16 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
+{
+	"classname" "func_simpleladder"
+	"origin" "-12118 -6205 -14"
+	"angles" "0 180 0"
+	"model" "*5"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
 ; --- Right side wall
 {
 	"classname" "prop_dynamic"
