Remove additional infected clips

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -375,6 +375,9 @@ filter:
 {
 	"classname" "func_playerinfected_clip"
 }
+{
+	"classname" "func_playerghostinfected_clip"
+}
 ; --- Change ghost hurt triggers into regular hurt triggers
 modify:
 {
