c2m1 Extended ladder before one way drop to reach the motel roof and assisted with reaching balcony and other side of roof c2m1 Added an additional ladder to get on the motel roof by the one way drop c2m1 Added rocks at the top of the one way drop c5m2 Event horde will now always stop during tank (thanks to NF and Daroot Leafstorm for their help) c5m2 Limited maximum queued horde during event to stop excessive amounts of horde spawning after the event is stopped

--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -1057,6 +1057,15 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Rocks at the top of the one way drop
+{
+	"classname" "prop_dynamic"
+	"origin" "1832 3096 -992"
+	"angles" "7 270 0"
+	"model" "models/props_foliage/swamp_rock02.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 ; --- Props before the final hill
 {
 	"classname" "prop_dynamic"
@@ -1227,43 +1236,97 @@ modify:
 	}
 }
 add:
-; --- Infected ladder to climb to the motel balcony before the drop
-; --- Speedclimbing as a ghost allows spawns to reach the roof
+; --- Infected ladders to climb to the motel balcony before the drop
 {
 	"classname" "func_simpleladder"
-	"origin" "12261 11576.5 -466.5"
-	"angles" "0 180 0"
-	"model" "*114"
+	"origin" "-2722 4507 122"
+	"angles" "0 270 0"
+	"model" "*139"
 	"normal.x" "0.00"
 	"normal.y" "-1.00"
 	"normal.z" "0.00"
 	"team" "2"
 }
-; --- Prop for ladder
 {
-	"classname" "prop_dynamic"
-	"origin" "2730 3134 -649"
-	"angles" "0 0 0"
-	"model" "models/props_rooftop/gutter_pipe_256.mdl"
-	"solid" "0"
-	"disableshadows" "1"
+	"classname" "func_simpleladder"
+	"origin" "-2722 4507 -6"
+	"angles" "0 270 0"
+	"model" "*139"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "2730 3134 -905"
-	"angles" "0 0 0"
-	"model" "models/props_rooftop/gutter_pipe_256.mdl"
-	"solid" "0"
-	"disableshadows" "1"
+	"classname" "func_simpleladder"
+	"origin" "-3948 4507 122"
+	"angles" "0 270 0"
+	"model" "*139"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
 }
-; --- Block part of pipe without a ladder
+{
+	"classname" "func_simpleladder"
+	"origin" "-3948 4507 -6"
+	"angles" "0 270 0"
+	"model" "*139"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected clipping to help reach balcony
 {
 	"classname" "env_physics_blocker"
-	"origin" "2730 3130 -695"
-	"mins" "-15 -4.5 -47"
-	"maxs" "15 4.5 47"
+	"origin" "2772 3128 -786"
+	"mins" "-18 -5 -20"
+	"maxs" "18 5 20"
 	"initialstate" "1"
-	"BlockType" "0"
+	"BlockType" "2"
+}
+; --- Props for ladder
+{
+	"classname" "prop_dynamic"
+	"origin" "2706 3134 -649"
+	"angles" "0 0 0"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2706 3134 -905"
+	"angles" "0 0 0"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1480 3134 -649"
+	"angles" "0 0 0"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1480 3134 -905"
+	"angles" "0 0 0"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+; --- Assist with crossing around skybox
+{
+	"classname" "prop_dynamic"
+	"origin" "2853 3153 -638"
+	"angles" "0 0 0"
+	"model" "models/props_street/awning_long_limitedcollision.mdl"
+	"solid" "6"
+	"disableshadows" "1"
 }
 ; --- Infected ladder to stop players getting stuck behind debris after the drop
 {
