--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -15,6 +15,21 @@ modify:
 		"OnClose" "directorBeginScriptdirector_quiet.nut01"
 	}
 }
+; --- Replace event director script with modified version
+{
+	match:
+	{
+		"targetname" "finale_start_trigger"
+	}
+	delete:
+	{
+		"OnStartTouch" "directorBeginScriptdirector_onslaught.nut1-1"
+	}
+	insert:
+	{
+		"OnStartTouch" "director,BeginScript,director_onslaught_rework_c5m2.nut,1,-1"
+	}
+}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
