c5m2 Event mob timer is reset when tank spawns to make sure horde stops equally fast for both teams c7m2 Removed slow movement trigger in water after barge that Valve forgot to remove from the L4D2 port

--- a/cfg/stripper/maps/c7m2_barge.cfg
+++ b/cfg/stripper/maps/c7m2_barge.cfg
@@ -141,11 +141,6 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Remove forced slow movement on the gravel pile
-filter:
-{
-	"targetname" "gravelpile_playermovement"
-}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
@@ -187,6 +182,37 @@ filter:
 ; ==              TRIGGER REMOVAL / FIX              ==
 ; ==    Fix triggers that interfere with gameplay    ==
 ; =====================================================
+; --- Reduce the amount of slowdown on the gravel pile
+;add:
+;{
+;	"classname" "player_speedmod"
+;	"targetname" "gravel_speed_mod"
+;}
+;modify:
+;{
+;	match:
+;	{
+;		"targetname" "gravelpile_playermovement"
+;	}
+;	replace:
+;	{
+;		"classname" "trigger_multiple"
+;	}
+;	insert:
+;	{
+;		"OnStartTouch" "gravel_speed_mod,ModifySpeed,0.5,0"
+;		"OnEndTouch" "gravel_speed_mod,ModifySpeed,1,0"
+;	}
+;}
+filter:
+; --- Remove forced slow movement on the gravel pile
+{
+	"targetname" "gravelpile_playermovement"
+}
+; --- Remove slow movement trigger in water after barge that Valve forgot to remove from the L4D2 port
+{
+	"hammerid" "2536834"
+}
 
 
 ; #############  LADDER CHANGES AND FIXES  ############
