c7m2 Re-enabled slowdown on the gravel pile event c6m2 Removed barricades on plank crossing fire escape, removed boxes inside Jones & Sons building c6m2 Repositioned barricades on the alternative route to the plank crossing, added plywood to parts of the barricades, adjusted relevant clipping and ladders

--- a/cfg/stripper/maps/c6m2_bedlam.cfg
+++ b/cfg/stripper/maps/c6m2_bedlam.cfg
@@ -1277,49 +1277,49 @@ add:
 ; =====================================================
 add:
 ; --- Block the lower section of the fire escape, forcing survivors to reach the top via the indoor route
-{
-	"classname" "prop_dynamic"
-	"origin" "345 2946 24"
-	"angles" "0 90 0"
-	"model" "models/props_street/police_barricade.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "284 2969 68"
-	"angles" "0 102.5 -45"
-	"model" "models/props_street/police_barricade.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "256 2946 116"
-	"angles" "45 0 0"
-	"boxmins" "-70 -2 -37.5"
-	"boxmaxs" "70 2 37.5"
-	"mins" "-70 -2 -37.5"
-	"maxs" "70 2 37.5"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "342 2946 102"
-	"mins" "-48 -2 -78.5"
-	"maxs" "48 2 78.5"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "382 2956 102"
-	"mins" "-2.5 -7.5 -78.5"
-	"maxs" "2.5 7.5 78.5"
-	"initialstate" "1"
-	"BlockType" "1"
-}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "345 2946 24"
+;	"angles" "0 90 0"
+;	"model" "models/props_street/police_barricade.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "284 2969 68"
+;	"angles" "0 102.5 -45"
+;	"model" "models/props_street/police_barricade.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;}
+;{
+;	"classname" "env_physics_blocker"
+;	"origin" "256 2946 116"
+;	"angles" "45 0 0"
+;	"boxmins" "-70 -2 -37.5"
+;	"boxmaxs" "70 2 37.5"
+;	"mins" "-70 -2 -37.5"
+;	"maxs" "70 2 37.5"
+;	"initialstate" "1"
+;	"BlockType" "1"
+;}
+;{
+;	"classname" "env_physics_blocker"
+;	"origin" "342 2946 102"
+;	"mins" "-48 -2 -78.5"
+;	"maxs" "48 2 78.5"
+;	"initialstate" "1"
+;	"BlockType" "1"
+;}
+;{
+;	"classname" "env_physics_blocker"
+;	"origin" "382 2956 102"
+;	"mins" "-2.5 -7.5 -78.5"
+;	"maxs" "2.5 7.5 78.5"
+;	"initialstate" "1"
+;	"BlockType" "1"
+;}
 ; --- Open up an alternative route to the right (tunnel used for survival/scavenge)
 filter:
 {
@@ -1372,17 +1372,17 @@ add:
 ; --- Force survivors to go inside the building at the tunnel exit so that the route takes a similar amount of time to the plank
 {
 	"classname" "prop_dynamic"
-	"origin" "1119 3731 -160"
-	"angles" "0 30 0"
+	"origin" "1150 3739 -160"
+	"angles" "0 0 0"
 	"model" "models/props_street/police_barricade2.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "1044 3806 -161"
-	"angles" "0 74.5 0"
-	"model" "models/props_street/police_barricade.mdl"
+	"origin" "1080 3815 -161"
+	"angles" "0 90 0"
+	"model" "models/props_street/police_barricade2.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
@@ -1402,26 +1402,60 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Plywood on barricades for spawns and ladder visibility
+{
+	"classname" "prop_dynamic"
+	"origin" "1100 3814 -162"
+	"angles" "90 270 0"
+	"model" "models/props_highway/plywood_03.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1151 3810 -161"
+	"angles" "90 180 0"
+	"model" "models/props_highway/plywood_03.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 ; --- Infected ladders to get over the barricade
 {
 	"classname" "func_simpleladder"
-	"origin" "-2413.01 2516.98 -58"
-	"angles" "0 300 0"
+	"origin" "1795 7486 -58"
+	"angles" "0 180 0"
 	"model" "*92"
-	"normal.x" "0.86"
-	"normal.y" "0.50"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
 	"normal.z" "0.00"
 	"team" "2"
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "4627.01 4983.51 -58"
-	"angles" "0 120 0"
+	"origin" "-2521 4456 -57"
+	"angles" "0 270 0"
 	"model" "*92"
-	"normal.x" "-0.86"
-	"normal.y" "-0.50"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
 	"normal.z" "0.00"
 	"team" "2"
+}
+; --- Clipping to stop players getting stuck between the car and barricades
+{
+	"classname" "env_physics_blocker"
+	"origin" "1082 3831 -138"
+	"mins" "-70 -15 -20"
+	"maxs" "70 15 20"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "1097 3831 -108"
+	"mins" "-35 -15 -10"
+	"maxs" "35 15 10"
+	"initialstate" "1"
+	"BlockType" "0"
 }
 ; --- Boxes to get over the barricades from the outside (nearby car can also be used)
 {
@@ -1465,67 +1499,58 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Clip to help infected get on the green awning from the barricade
-{
-	"classname" "env_physics_blocker"
-	"origin" "1181 3749 -4"
-	"mins" "-28 -20 -1"
-	"maxs" "28 20 1"
-	"initialstate" "1"
-	"BlockType" "2"
-}
 ; --- Block the path at the lower stairs in the Jones & Sons building, forcing survivors to go to the top floor
-{
-	"classname" "prop_dynamic"
-	"origin" "874 3254 8"
-	"angles" "0 90 0"
-	"model" "models/props_crates/static_crate_40.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "913 3266 8"
-	"angles" "0 90 0"
-	"model" "models/props_crates/static_crate_40.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "909 3215 8"
-	"angles" "0 0 0"
-	"model" "models/props_crates/static_crate_40.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "918 3263 47"
-	"angles" "0 0 0"
-	"model" "models/props_crates/static_crate_40.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "916 3217 47"
-	"angles" "0 90 0"
-	"model" "models/props_crates/static_crate_40.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "874 3254 8"
+;	"angles" "0 90 0"
+;	"model" "models/props_crates/static_crate_40.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "913 3266 8"
+;	"angles" "0 90 0"
+;	"model" "models/props_crates/static_crate_40.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "909 3215 8"
+;	"angles" "0 0 0"
+;	"model" "models/props_crates/static_crate_40.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "918 3263 47"
+;	"angles" "0 0 0"
+;	"model" "models/props_crates/static_crate_40.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "916 3217 47"
+;	"angles" "0 90 0"
+;	"model" "models/props_crates/static_crate_40.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;}
 ; --- Infected ladder to get over boxes
-{
-	"classname" "func_simpleladder"
-	"origin" "-2735.5 3871 72"
-	"angles" "0 270 0"
-	"model" "*92"
-	"normal.x" "1.00"
-	"normal.y" "0.00"
-	"normal.z" "0.00"
-	"team" "2"
-}
+;{
+;	"classname" "func_simpleladder"
+;	"origin" "-2735.5 3871 72"
+;	"angles" "0 270 0"
+;	"model" "*92"
+;	"normal.x" "1.00"
+;	"normal.y" "0.00"
+;	"normal.z" "0.00"
+;	"team" "2"
+;}
 
 ; =====================================================
 ; ==                EVENT ROUTE REWORK               ==
