--- a/cfg/stripper/maps/c7m2_barge.cfg
+++ b/cfg/stripper/maps/c7m2_barge.cfg
@@ -206,9 +206,9 @@ filter:
 ;}
 filter:
 ; --- Remove forced slow movement on the gravel pile
-{
-	"targetname" "gravelpile_playermovement"
-}
+;{
+;	"targetname" "gravelpile_playermovement"
+;}
 ; --- Remove slow movement trigger in water after barge that Valve forgot to remove from the L4D2 port
 {
 	"hammerid" "2536834"
