c6m2 Reverted event to being infinite

--- a/cfg/stripper/maps/c6m2_bedlam.cfg
+++ b/cfg/stripper/maps/c6m2_bedlam.cfg
@@ -170,32 +170,32 @@ add:
 	"OnMapSpawn" "nav_sewer_drop_obscured,ApplyNavAttributes,,10,-1"
 }
 ; --- Change the event from a single infinite event to 2 separate panic events
-modify:
-{
-	match:
-	{
-		"targetname" "relay_minifinale"
-	}
-	delete:
-	{
-		"OnTrigger" "directorBeginScriptc6m2_minifinale0-1"
-		"OnTrigger" "directorForcePanicEvent0-1"
-	}
-	insert:
-	{
-		"OnTrigger" "director,ForcePanicEvent,,1,1"
-	}
-}
-{
-	match:
-	{
-		"targetname" "relay_second_gate"
-	}
-	insert:
-	{
-		"OnTrigger" "director,ForcePanicEvent,,1,1"
-	}
-}
+;modify:
+;{
+;	match:
+;	{
+;		"targetname" "relay_minifinale"
+;	}
+;	delete:
+;	{
+;		"OnTrigger" "directorBeginScriptc6m2_minifinale0-1"
+;		"OnTrigger" "directorForcePanicEvent0-1"
+;	}
+;	insert:
+;	{
+;		"OnTrigger" "director,ForcePanicEvent,,1,1"
+;	}
+;}
+;{
+;	match:
+;	{
+;		"targetname" "relay_second_gate"
+;	}
+;	insert:
+;	{
+;		"OnTrigger" "director,ForcePanicEvent,,1,1"
+;	}
+;}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
