c1m1 Added a fireaxe to the saferoom stairwell c1m2 Added an infected ladder to get over the bus after the event c1m2 Added an infected ladder to get over the fence by porta potties after the event c3m1 Reworked the added one way drop at the town entrance

--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -126,6 +126,18 @@ add:
 	"ammo" "72"
 	"spawnflags" "1"
 }
+; --- Fireaxe in the saferoom stairwell
+{
+	"classname" "weapon_melee_spawn"
+	"origin" "248 5629 2657"
+	"angles" "0 45 90"
+	"melee_weapon" "fireaxe"
+	"spawn_without_director" "1"
+	"solid" "0"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "1"
+}
 
 ; =====================================================
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
