--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -1227,6 +1227,28 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
+; --- Infected ladder to get over the bus after the event
+{
+	"classname" "func_simpleladder"
+	"origin" "-1521 2695 -14"
+	"angles" "0 0 0"
+	"model" "*71"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to get over the fence by porta potties after the event
+{
+	"classname" "func_simpleladder"
+	"origin" "-2149 451 0"
+	"angles" "0 0 0"
+	"model" "*71"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
 ; --- Infected ladder to get on the tent by the end saferoom
 {
 	"classname" "func_simpleladder"
