--- a/cfg/stripper/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/maps/c3m1_plankcountry.cfg
@@ -1071,35 +1071,92 @@ add:
 ; ==     Prevent survivors from leaving the town     ==
 ; =====================================================
 add:
-; --- Truck to climb over at entrance of town
+; --- Van to jump over fence at entrance of town
 {
 	"classname" "prop_dynamic"
-	"origin" "-7851 8037 8"
-	"angles" "0 270 0"
-	"model" "models/props_vehicles/semi_trailer.mdl"
+	"origin" "-8056 8186 8"
+	"angles" "0 18 0"
+	"model" "models/props_vehicles/van.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Ladder to climb over truck
 {
-	"classname" "func_simpleladder"
-	"origin" "-7078 1991.45 -837.5"
-	"angles" "0 0 8"
-	"model" "*116"
-	"normal.x" "0.00"
-	"normal.y" "0.99"
-	"normal.z" "0.13"
-	"team" "0"
+	"classname" "prop_dynamic"
+	"origin" "-8056 8186 8"
+	"angles" "0 18 0"
+	"model" "models/props_vehicles/van_glass.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Log pile to jump over fence
+{
+	"classname" "prop_dynamic"
+	"origin" "-7733 8064 7"
+	"angles" "0 90 0"
+	"model" "models/props/cs_militia/logpile2.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-7732 8079 88"
+	"mins" "-29 -13 -3"
+	"maxs" "29 13 3"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Fence in front of the van
+{
+	"classname" "prop_dynamic"
+	"origin" "-7827 8058 23"
+	"angles" "0 90 0"
+	"model" "models/props_exteriors/fence002.mdl"
+	"solid" "6"
+	"disableshadows" "1"
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "-7902 8098 90"
-	"angles" "-8 90 0"
-	"model" "models/props/de_train/ladderaluminium.mdl"
-	"solid" "0"
+	"origin" "-7571 8058 23"
+	"angles" "0 90 0"
+	"model" "models/props_exteriors/fence002_end.mdl"
+	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Fences by the truck
+; --- Clipping on fence
+{
+	"classname" "env_physics_blocker"
+	"origin" "-7838 8060 63"
+	"mins" "-282 -6 -39"
+	"maxs" "282 6 39"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-8016 8077 60"
+	"mins" "-36 -13 -36"
+	"maxs" "36 13 36"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Prevent exploits to return over the fence
+{
+	"classname" "env_physics_blocker"
+	"origin" "-8096 8053 61"
+	"mins" "-24 -4 -54"
+	"maxs" "24 4 54"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-8218 8024 522"
+	"mins" "-16 -32 -502"
+	"maxs" "16 32 502"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Fences blocking the path around the van
 {
 	"classname" "prop_dynamic"
 	"origin" "-8504 8065 67"
@@ -1183,9 +1240,9 @@ add:
 }
 {
 	"classname" "env_physics_blocker"
-	"origin" "-8386 8056 521"
-	"mins" "-242 -8 -503"
-	"maxs" "242 8 503"
+	"origin" "-8374 8060 521"
+	"mins" "-254 -4 -503"
+	"maxs" "254 4 503"
 	"initialstate" "1"
 	"BlockType" "1"
 }
@@ -1203,15 +1260,6 @@ add:
 	"origin" "-8199 8080 649"
 	"mins" "-31 -105 -375"
 	"maxs" "31 105 375"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-; --- Block standing on truck wheels after drop to jump back over
-{
-	"classname" "env_physics_blocker"
-	"origin" "-8050 7983 90"
-	"mins" "-65 -3 -83"
-	"maxs" "65 3 83"
 	"initialstate" "1"
 	"BlockType" "1"
 }
