c1m1 Added a set of T1 weapons to the room by the elevator

--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -191,6 +191,29 @@ add:
 	"spawnflags" "2"
 	"count" "1"
 }
+; --- Guns in the room by the elevator
+{
+	"classname" "weapon_spawn"
+	"origin" "2155 5367 2487"
+	"angles" "0 270 -90"
+	"weapon_selection" "any_smg"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
+{
+	"classname" "weapon_spawn"
+	"origin" "2141 5413 2465"
+	"angles" "0 223 -90"
+	"weapon_selection" "tier1_shotgun"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
 
 ; =====================================================
 ; ==                STATIC AMMO PILES                ==
