--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -457,13 +457,45 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Add some dense trees to help players see its blocked
+; --- Fences to indicate blocking for survivors
 {
 	"classname" "prop_dynamic"
-	"origin" "-4582 1476 441"
-	"angles" "0 15 0"
-	"model" "models/props_foliage/urban_trees_dryleaves01_dense.mdl"
-	"solid" "0"
+	"origin" "-4550 1416 448"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence003_64.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4610 1416 448"
+	"angles" "0 90 0"
+	"model" "models/props_urban/fence003_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4672 1480 448"
+	"angles" "0 0 0"
+	"model" "models/props_urban/fence003_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4672 1608 448"
+	"angles" "0 0 0"
+	"model" "models/props_urban/fence003_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4672 1736 448"
+	"angles" "0 0 0"
+	"model" "models/props_urban/fence003_128.mdl"
+	"solid" "6"
 	"disableshadows" "1"
 }
 ; --- Block standing on the hedge before the walkway
