c2m1 replaced added rocks on island before the final hill with a shrub wall c4m1/c4m5 fixed hittable physics issues around the generator near the burger tank

--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -1066,15 +1066,16 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Props before the final hill
+; --- Shrub on island before the final hill
 {
 	"classname" "prop_dynamic"
-	"origin" "-1498 1296 -1815"
-	"angles" "-3.47988 103.47 1.41387"
-	"model" "models/props_foliage/swamp_rock02.mdl"
+	"origin" "-1711 1326 -1791"
+	"angles" "0 90 0"
+	"model" "models/props_foliage/swamp_shrubwall_block_256_deep.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Tree in back corner before the final hill
 {
 	"classname" "prop_dynamic"
 	"origin" "-2062 1790 -1796"
