--- a/cfg/stripper/maps/c4m1_milltown_a.cfg
+++ b/cfg/stripper/maps/c4m1_milltown_a.cfg
@@ -1117,8 +1117,22 @@ add:
 add:
 {
 	"classname" "logic_auto"
+	; --- Replace broken blocker on generator by burger tank causing physics issues
+	"OnMapSpawn" "anv_mapfixes_booster_ginnyjon,Kill,,10,-1"
 	; --- Replace blocker on fence by garage sale
 	"OnMapSpawn" "anv_mapfixes_treehouse_whitefence,Kill,,10,-1"
+}
+; --- Replacement for anv_mapfixes_booster_ginnyjon
+{
+	"classname" "env_physics_blocker"
+	"origin" "-5425 6789 385"
+	"angles" "0 45 0"
+	"mins" "-10 -4 -284"
+	"maxs" "6 4 0"
+	"boxmins" "-10 -4 -284"
+	"boxmaxs" "6 4 0"
+	"initialstate" "1"
+	"BlockType" "1"
 }
 
 ; =====================================================
