c1m2 removed blockers on platform with tree, up the stairs after the one way drop, reworked added fences on platform c1m2 blocked tank from spawning between 49% - 55% c1m2 moved the police car at the one way drop further down the street

--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -323,6 +323,28 @@ filter:
 {
 	"targetname" "InstanceAuto21-police_car_glass"
 }
+; --- Move the police car at the one way drop further down the street
+modify:
+{
+	match:
+	{
+		"targetname" "InstanceAuto25-police_car"
+	}
+	replace:
+	{
+		"origin" "-4092 1669 86"
+	}
+}
+{
+	match:
+	{
+		"targetname" "InstanceAuto25-police_car_glass"
+	}
+	replace:
+	{
+		"origin" "-4092 1669 86"
+	}
+}
 
 
 ; #############  MAP CLIPPING AND ISSUES  #############
@@ -435,68 +457,6 @@ add:
 	"maxs" "48 17 624"
 	"initialstate" "1"
 	"BlockType" "1"
-}
-; --- Block standing on the platform up the stairs after the one way drop
-; --- Prevents jumping on hedge/generator, and returning from the one way drop
-{
-	"classname" "env_physics_blocker"
-	"origin" "-4596 1600 956"
-	"mins" "-84 -192 -516.5"
-	"maxs" "84 192 516.5"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "-4510 1611 956"
-	"angles" "0 -14 0"
-	"mins" "-48 -198.5 -516.5"
-	"maxs" "48 198.5 516.5"
-	"boxmins" "-48 -198.5 -516.5"
-	"boxmaxs" "48 198.5 516.5"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-; --- Fences to indicate blocking for survivors
-{
-	"classname" "prop_dynamic"
-	"origin" "-4550 1416 448"
-	"angles" "0 90 0"
-	"model" "models/props_urban/fence003_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-4610 1416 448"
-	"angles" "0 90 0"
-	"model" "models/props_urban/fence003_128.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-4672 1480 448"
-	"angles" "0 0 0"
-	"model" "models/props_urban/fence003_128.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-4672 1608 448"
-	"angles" "0 0 0"
-	"model" "models/props_urban/fence003_128.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-4672 1736 448"
-	"angles" "0 0 0"
-	"model" "models/props_urban/fence003_128.mdl"
-	"solid" "6"
-	"disableshadows" "1"
 }
 ; --- Block standing on the hedge before the walkway
 {
@@ -911,6 +871,55 @@ add:
 	"origin" "-2368 2637 0"
 	"angles" "0 0 0"
 	"model" "models/props_industrial/plywood_leaning.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Fences on platform up the stairs after the one way drop
+{
+	"classname" "prop_dynamic"
+	"origin" "-4550 1413 448"
+	"angles" "0 270 0"
+	"model" "models/props_urban/fence003_64.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4510 1444 448"
+	"angles" "0 345 0"
+	"model" "models/props_urban/fence003_64.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4502 1474 448"
+	"angles" "0 345 0"
+	"model" "models/props_urban/fence_post003.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4470 1597 448"
+	"angles" "0 345 0"
+	"model" "models/props_urban/fence003_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4438 1717 448"
+	"angles" "0 345 0"
+	"model" "models/props_urban/fence003_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4422 1810 448"
+	"angles" "0 0 0"
+	"model" "models/props_urban/fence003_64.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
