c1m2 added clipping to new fences

--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -923,6 +923,37 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Clipping on fences
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4452 1663 471"
+	"angles" "0 -14 0"
+	"mins" "-4 -134 -23"
+	"maxs" "4 134 23"
+	"boxmins" "-4 -134 -23"
+	"boxmaxs" "4 134 23"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4508 1441 471"
+	"angles" "0 -14 0"
+	"mins" "-4 -34 -23"
+	"maxs" "4 34 23"
+	"boxmins" "-4 -34 -23"
+	"boxmaxs" "4 34 23"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4550 1412 471"
+	"mins" "-34 -4 -23"
+	"maxs" "34 4 23"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 ; --- Boxes on the walkway
 {
 	"classname" "prop_dynamic"
